# open-browser

./: .gitignore  README  README.md  open-browser.cabal
example/: Main.hs
lib/Network/: Browser.hs
lib/Network/Browser/: Linux.hs  OSX.hs
lib/Web/: Browser.hs
lib/Web/Browser/: Linux.hs  OSX.hs  Windows.hs
