name:                       open-browser
version:                    0.1.2.0
synopsis:                   Open a web browser from Haskell.
description:                Open a web browser from Haskell.
                            Currently only Linux and OS X are supported.
license:                    BSD3
license-file:               LICENSE
author:                     rightfold
maintainer:                 rightfold@gmail.com
bug-reports:                https://github.com/rightfold/open-browser/issues
category:                   Network
build-type:                 Simple
cabal-version:              >=1.10

source-repository head
    type:                   git
    location:               https://github.com/rightfold/open-browser.git

library
    exposed-modules:        Network.Browser, Web.Browser
    other-modules:          Web.Browser.Linux, Web.Browser.OSX
    hs-source-dirs:         lib
    default-language:       Haskell2010
    build-depends:          base >= 4 && < 5, process >= 1 && < 2

executable example
    main-is:                Main.hs
    hs-source-dirs:         example
    default-language:       Haskell2010
    build-depends:          base >= 4 && < 5, open-browser
